--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-database.url=jdbc:mysql://localhost:3306/forum_system
+database.url=jdbc:mysql://localhost:3306/photo_contest
 database.username=root
 database.password=root
