--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
+	implementation 'com.jcraft:jsch:0.1.55'
 	implementation 'commons-beanutils:commons-beanutils:1.9.4'
 
 	compileOnly 'org.projectlombok:lombok'
