--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 server.error.include-stacktrace=never
 
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.file-size-threshold=2KB
+spring.servlet.multipart.resolve-lazily=true
+spring.servlet.multipart.location=${java.io.tmpdir}
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/photo_contest
