--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
 
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'com.squareup.okhttp3:okhttp:4.9.2'
+	implementation 'org.json:json:20220320'
+
 	implementation 'com.jcraft:jsch:0.1.55'
 	implementation 'commons-beanutils:commons-beanutils:1.9.4'
 
