--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
+server.error.include-message=always
 server.error.include-stacktrace=never
+server.error.include-binding-errors=always
+spring.thymeleaf.cache=false
 
 spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.resolve-lazily=true
 spring.servlet.multipart.location=${java.io.tmpdir}
