--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.thymeleaf.cache=false
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.file-size-threshold=2KB
+logging.level.org.hibernate.SQL=DEBUG
+
 spring.servlet.multipart.resolve-lazily=true
 spring.servlet.multipart.location=${java.io.tmpdir}
 
