--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,12 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/photo_contest
 database.username=root
 database.password=root
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=petrov.argir225@gmail.com
+spring.mail.password=vdwumthprlmwlwjz
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+mail.debug=true
+
