--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.file-size-threshold=2KB
 logging.level.org.hibernate.SQL=DEBUG
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
 spring.servlet.multipart.resolve-lazily=true
 spring.servlet.multipart.location=${java.io.tmpdir}
 
