--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.error.include-message=always
 server.error.include-stacktrace=never
 server.error.include-binding-errors=always
 spring.thymeleaf.cache=false
+logging.level.org.springframework.transaction=DEBUG
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
