feat: Added sqlServer dependency, fixed issue with contest proxies

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ repositories {
 
 dependencies {
 	implementation 'com.mysql:mysql-connector-j'
+	implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.3.jre17'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
