--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,11 @@ server.error.include-message=always
 server.error.include-stacktrace=never
 server.error.include-binding-errors=always
 spring.thymeleaf.cache=false
-logging.level.org.springframework.transaction=DEBUG
 
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=15MB
 spring.servlet.multipart.file-size-threshold=2KB
-logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
@@ -19,6 +18,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/photo_contest
 database.username=root
 database.password=root
+
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#database.url=jdbc:sqlserver://team12.database.windows.net:1433;database=photo-contest;user=team12user@team12;password=team12-pc;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#database.username=team12user
+#database.password=team12-pc
+#server.port=${PORT:8080}
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
