--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,8 +22,8 @@ database.password=root
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=petrov.argir225@gmail.com
-spring.mail.password=vdwumthprlmwlwjz
+spring.mail.username=junkiesyardteam@gmail.com
+spring.mail.password=gmxvereerywdrqnj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 mail.debug=true
