--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@ dependencies {
 	implementation 'com.microsoft.sqlserver:mssql-jdbc:11.2.3.jre17'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
@@ -31,7 +30,7 @@ dependencies {
 	implementation 'io.springfox:springfox-swagger2:3.0.0'
 	implementation 'io.springfox:springfox-swagger-ui:3.0.0'
 
-
+	implementation 'org.springframework.security:spring-security-crypto:6.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'com.squareup.okhttp3:okhttp:4.9.2'
 	implementation 'org.json:json:20220320'
@@ -45,7 +44,6 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	testImplementation 'org.springframework.security:spring-security-test'
 }
 
 tasks.named('test') {
